# kameya_art_studio

./: .env  .gitignore  .onedev-buildspec.yml  Caddyfile  Dockerfile  Makefile  alembic.ini  bot.py  docker-compose.yml  init_db.py  pyproject.toml  setup.py
.claude/agents/: aiogram-e2e-test-writer.md
alembic/: Makefile  env.py
alembic/versions/: 2025_11_12_1451-e87727e845eb_content_type.py  2025_11_25_1749-14912a8644ca_datetime.py  2025_12_26_1408-8e6a060fcc98_nullable_description.py
handlers/: base.py
src/: config.py
src/adapters/repositories/gspread/: gspread_worker.py
src/application/: models.py
src/application/domen/: text.py
src/application/domen/models/: __init__.py  activity_type.py  lesson_option.py
src/application/factory/telegram/: __init__.py  dispatcher.py
src/application/in_memory/: interfaces.py
src/application/utils/: __init__.py  mjson.py  utils.py
src/cache/: dto.py  user_collector.py
src/data/: welcome_video.MOV
src/database/: dto.py  user_collector.py
src/database/interfaces/: models.py  repositories.py
src/dialogs/: base_menu.py  first_seend.py  registration.py  sign_up.py  states.py  utils.py
src/facade/: users.py
src/gspread_handler/: gspread_worker.py
src/handlers/: base.py  setup.py
src/infrastracture/: __init__.py
src/infrastracture/adapters/interfaces/: repositories.py
src/infrastracture/adapters/repositories/: activities.py  gspread_storage.py  gspread_users.py  gspread_worker.py  lessons.py  repo.py  users.py
src/infrastracture/database/interfaces/: repositories.py
src/infrastracture/database/redis/: key_builder.py  keys.py  repository.py
src/infrastracture/database/sqlite/: __init__.py  base.py  dao.py  db.py  models.py  sqlite.py
src/infrastracture/in_memory/: storage.py  users.py
src/infrastracture/repository/: users.py
src/keyboards/: keyboard.py  text.py
src/presentation/: callbacks.py  message_sender.py  notifier.py
src/presentation/dialogs/: admin.py  base_menu.py  developer.py  first_seen.py  first_seend.py  models.py  payments_approve.py  registration.py  sign_up.py  states.py  utils.py
src/presentation/dialogs/mass_classes/: mclasses.py
src/presentation/dialogs/models/: __init__.py  activity_type.py  lesson_option.py
src/presentation/handlers/: deleoper_router.py  router.py  setup.py
src/presentation/keyboards/: keyboard.py  text.py
src/presentation/middlewares/: middleware.py  throttling.py
src/presentation/reminders/: main_reminder.py  payment_reminder.py  sign_up_reminder.py
tests/: config.py  conftest.py  mocks.py  test_users_repository.py
tests/e2e/: __init__.py  conftest.py  test_dialogs.py  test_user_scenarios.py
tests/fixtures/: __init__.py  activities.py  users.py
tests/test_dialogs/: test_start_menu.py
