[tool.poetry]
name = "kameya-art-bot"
version = "0.1.0"
description = ""
authors = ["genatin <genatin@engee.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.14.0"
pydantic-settings = "^2.6.1"
gspread = "^6.1.4"
aiogram-dialog = "^2.3.0"
pydantic = "^2.10.5"
redis = "^5.2.1"
msgspec = "^0.19.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
