[tool.poetry]
name = "kameya-art-bot"
version = "0.1.0"
description = ""
authors = ["genatin <genatin@engee.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.14.0"
pydantic-settings = "^2.6.1"
gspread = "^6.1.4"
aiogram-dialog = "^2.3.0"
pydantic = "^2.10.5"
msgspec = "^0.19.0"
redis = "^5.2.1"
sqlalchemy = "^2.0.39"
aiosqlite = "^0.21.0"
emoji = "^2.14.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true