[project]
name = "kameya-art-bot"
version = "0.1.0"
description = ""
authors = [{ name = "genatin", email = "natin.gennadiy@mail.ru" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "aiogram>=3.14.0,<4",
    "pydantic-settings>=2.6.1,<3",
    "gspread>=6.1.4,<7",
    "aiogram-dialog>=2.3.0,<3",
    "pydantic>=2.10.5,<3",
    "msgspec>=0.19.0,<0.20",
    "redis>=5.2.1,<6",
    "sqlalchemy>=2.0.39,<3",
    "aiosqlite>=0.21.0,<0.22",
    "emoji>=2.14.1,<3",
    "ruff>=0.11.6",
    "alembic>=1.15.2",
    "greenlet>=3.1.1",
    "apscheduler>=3.11.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1,<2",
    "flake8>=7.1.2,<8",
    "pre-commit>=4.2.0,<5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]


[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
lint.select = [
    "E", # PyCodeStyle errors
    "W", # PyCodeStyle warnings
    "I", # isort
    "N", # pep8-naming
    "F", # Pyflakes
    "UP", # pyupgrade
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "B", # flake8-bugbear
    "ASYNC", # flake8-asynс
    "G", # flake8-logging-forma
    "DTZ", # flake8-datetimez раскоментить после рефакторинг
    "D", # - докстринги - самый душный линтер
    "RUF", # Ruff-specific rules
    "ANN201", # - neccecary type hints (undocument foo)
    "ANN202", # - neccecary type hints (private foo)
    "ANN204", # - neccecary type hints (special foo)
    "ANN205", # - neccecary type hints (class foo)
    "ANN206", # - neccecary type hints (static foo)
]
lint.ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106", # D106 Missing docstring in public nested class
    "D202", # D202cNo blank lines allowed after function docstring
    "N805",
    "B008", # B008 Do not perform function call `Depends` in argument defaults
    "D107", # Missing docstring in `__init__`
    "RUF001", # String contains ambiguous
    "RUF002", # Docstring contains ambiguous
    "RUF003", # Comment contains ambiguous
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
lint.extend-select = [
    "B006", # mutable-argument-default
    #    "COM812", # missing-trailing-comma
    "PIE794", # duplicate-class-field-definition
]

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "env",
    "cli.example",
    "cli",
]

# Same as Black.
line-length = 90

# Assume Python 3.11.
target-version = "py311"


[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["D", "E402", "E501", "ANN", "N999"]
"tests/*.py" = ["D", "DTZ", "E501", "ANN"]
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
